--- a/index.htm
+++ b/index.htm
@@ -26,7 +26,7 @@
                 
                 <p><label> Last name: <input name="lasttname"/></label></p>
 		<p><label> City: <input name="City"/></label></p>
-        <p>Hariom Varma....</p>
+        <p>Hariom Varma..</p>
 		<p><label> Mobile: <input name="Mobile"/></label></p>
 
                 <!-- Label and radio button field -->
